added Editable feild and message controller

--- a/server/.env
+++ b/server/.env
@@ -1,1 +1,2 @@
 JWT_SECRET = "my_secret_key"+
+MONGO_URI=mongodb+srv://shinde3270:Iekv82dFtZU91RPt@chat2cluster0.5bztdm9.mongodb.net/chatAppDB?retryWrites=true&w=majority&appName=Chat2Cluster0
